added marquee plus

--- a/sections/advanced-marquee.liquid
+++ b/sections/advanced-marquee.liquid
@@ -1,6 +1,6 @@
 {% schema %}
 {
-  "name": "Verano-Style Marquee",
+  "name": "Verano-Style Marquee Plus",
   "settings": [
     {
       "type": "textarea",
